dts: improvements for CPUS and OC GPU to 897MHz, adaptive policy for r37p0
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9830.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9830.dts
@@ -7547,15 +7547,15 @@
 		governor = "interactive";
 		interactive_info = <0x5c0a8 0x5e 0x00>;
 		gpu_dvfs_table_size = <0x08 0x08>;
-		gpu_dvfs_table = <0xcb200 0x4e 0x64 0x05 0x29a810 0x13d620 0x156c60 0x19c990 0xc3500 0x4e 0x64 0x05 0x29a810 0x13d620 0x00 0x19c990 0xab630 0x4e 0x5a 0x05 0x26ae58 0x13d620 0x00 0x00 0x8ba60 0x4e 0x5a 0x01 0x1ef1e0 0x13d620 0x00 0x00 0x6f158 0x4b 0x55 0x01 0x177bb8 0x13d620 0x00 0x00 0x5c0a8 0x4e 0x5a 0x01 0x14a140 0x00 0x00 0x00 0x3f7a0 0x4e 0x5d 0x01 0x14a140 0x00 0x00 0x00 0x26160 0x00 0x5d 0x01 0xce4c8 0x00 0x00 0x00>;
+		gpu_dvfs_table = <0xdafe8 0x4e 0x64 0x05 0x29a810 0x13d620 0x156c60 0x19c990 0xcb200 0x4e 0x62 0x05 0x29a810 0x13d620 0x156c60 0x19c990 0xab630 0x4e 0x5a 0x05 0x26ae58 0x13d620 0x00 0x00 0x8ba60 0x4e 0x5a 0x01 0x1ef1e0 0x13d620 0x00 0x00 0x6f158 0x4b 0x55 0x01 0x177bb8 0x13d620 0x00 0x00 0x5c0a8 0x4e 0x5a 0x01 0x14a140 0x00 0x00 0x00 0x3f7a0 0x4e 0x5d 0x01 0x14a140 0x00 0x00 0x00 0x26160 0x00 0x5d 0x01 0xce4c8 0x00 0x00 0x00>;
 		gpu_cl_pmqos_table_size = <0x08 0x05>;
-		gpu_cl_pmqos_table = <0xcb200 0x1ef1e0 0x13d620 0x156c60 0x19c990 0xc3500 0x1ef1e0 0x13d620 0x00 0x19c990 0xab630 0x177bb8 0x13d620 0x00 0x00 0x8ba60 0x177bb8 0x13d620 0x00 0x00 0x6f158 0x14a140 0x13d620 0x00 0x00 0x5c0a8 0xf78f0 0x00 0x00 0x00 0x3f7a0 0xa50a0 0x00 0x00 0x00 0x26160 0x854d0 0x00 0x00 0x00>;
+		gpu_cl_pmqos_table = <0xdafe8 0x1ef1e0 0x13d620 0x156c60 0x19c990 0xcb200 0x1ef1e0 0x13d620 0x156c60 0x19c990 0xab630 0x177bb8 0x13d620 0x00 0x00 0x8ba60 0x177bb8 0x13d620 0x00 0x00 0x6f158 0x14a140 0x13d620 0x00 0x00 0x5c0a8 0xf78f0 0x00 0x00 0x00 0x3f7a0 0xa50a0 0x00 0x00 0x00 0x26160 0x854d0 0x00 0x00 0x00>;
 		gpu_sustainable_info = <0x6f158 0x55 0x00 0x00 0x00>;
 		gpu_pmqos_cpu_cluster_num = <0x03>;
 		gpu_pmu_status_reg_offset = <0x2204>;
 		gpu_pmu_status_local_pwr_mask = <0x01>;
-		gpu_max_clock = <0xc3500>;              // 0xc3500
-		gpu_max_clock_limit = <0xc3500>;        // 0xc3500
+		gpu_max_clock = <0xdafe8>;              // 0xc3500
+		gpu_max_clock_limit = <0xdafe8>;        // 0xc3500
 		gpu_min_clock = <0x26160>;
 		gpu_dvfs_start_clock = <0x3f7a0>;
 		gpu_dvfs_bl_config_clock = <0x26160>;
@@ -7564,9 +7564,9 @@
 		gpu_voltage_offset_margin = <0x493e>;   // 0x927c
 		gpu_tmu_control = <0x01>;
 		gpu_temp_throttling_level_num = <0x06>;
-		gpu_temp_throttling = <0xc3500 0xab630 0x8ba60 0x6f158 0x5c0a8 0x3f7a0>;    // 0xc3500 0xab630 0x8ba60 0x6f158 0x5c0a8 0x3f7a0
+		gpu_temp_throttling = <0xdafe8 0xcb200 0xab630 0x8ba60 0x6f158 0x5c0a8>;    // 0xc3500 0xab630 0x8ba60 0x6f158 0x5c0a8 0x3f7a0
 		gpu_power_coeff = <0x271>;
-		gpu_dvfs_time_interval = <0x05>;
+		gpu_dvfs_time_interval = <0x01>;    // 1 tick : 10ms | default 5 tick : 50ms
 		gpu_default_wakeup_lock = <0x01>;
 		gpu_dynamic_abb = <0x00>;
 		gpu_early_clk_gating = <0x00>;
@@ -7581,12 +7581,12 @@
 		gpu_pmqos_compute_mif_max_clock = <0x26ae58>;
 		gpu_pmqos_mif_max_clock = <0x29a810>;
 		gpu_pmqos_mif_max_clock_base = <0x9eb10>;
-		gpu_pmqos_g3d_clock = <0xc3500 0xab630>;        // 0xc3500 0xab630
+		gpu_pmqos_g3d_clock = <0xdafe8 0xcb200>;        // 0xc3500 0xab630
 		gpu_pmqos_cl2_max_clock = <0x1506d0 0x19c990>;
 		gpu_pmqos_cl1_max_clock = <0x19c990 0x00>;
 		gpu_cl_dvfs_start_base = <0x5c0a8>;
 		gpu_debug_level = <0x04>;   // 0x03 : DEBUG(1) INFO(2) WARNING(3) ERROR(4)
-		gpu_trace_level = <0x02>;   // 0x08
+		gpu_trace_level = <0x01>;   // 0x08
 		gpu_mo_min_clock = <0x5c0a8>;
 		gpu_boost_gpu_min_lock = <0x00>;
 		gpu_boost_egl_min_lock = <0x1c9080>;
@@ -11472,7 +11472,7 @@
 
 			overutil-level0 {
 				cpus = "0-3\04-5\06-7";
-				ratio = <0x15 0x1b 0x1e>;   // 0x19 0x19 0x1e
+				ratio = <0x19 0x19 0x1e>;   // 0x19 0x19 0x1e
 			};
 
 			overutil-level1 {
@@ -11490,12 +11490,12 @@
 
 			coregroup1 {
 				coverage-ratio = <0x1e>;
-				active-ratio = <0x6f>;  // 0x64
+				active-ratio = <0x8a>;  // 0x64
 			};
 
 			coregroup2 {
 				coverage-ratio = <0x1e>;
-				active-ratio = <0x74>;  // 0x64
+				active-ratio = <0x8a>;  // 0x64
 			};
 		};
 
@@ -11507,13 +11507,13 @@
 			};
 
 			coregroup1 {
-				active-ratio-limit = <0x20>;    // 0x30
-				active-ratio-boost = <0x05>;    // 0x23
+				active-ratio-limit = <0x1a>;    // 0x30
+				active-ratio-boost = <0x15>;    // 0x23
 			};
 
 			coregroup2 {
 				active-ratio-limit = <0x1e>;    // 0x1e
-				active-ratio-boost = <0x00>;    // 0x00
+				active-ratio-boost = <0x10>;    // 0x00
 			};
 		};
 
@@ -11524,7 +11524,7 @@
 			attacker_search_timout_msec = <0x20>;
 
 			victim {
-				search_hist_size = <0x02>;  // 0x04
+				search_hist_size = <0x04>;  // 0x04
 				event_thr = <0x352>;
 				active_thr = <0x2bc>;
 			};
@@ -14316,22 +14316,22 @@
 
 			enyo-energy {
 				mips-per-mhz = <0x2a1>;
-				power-coefficient = <0x198>; // 0x172
+				power-coefficient = <0x172>; // 0x172
 				mips-per-mhz-s = <0x14f>;
 				power-coefficient-s = <0x120>;
 				static-power-coefficient = <0x51>;
-				efficiency-weight = <0x64>; // 0xc8
+				efficiency-weight = <0xc8>; // 0xc8
 				efficiency-weight-perf = <0xc8>;
 				phandle = <0x139>;
 			};
 
 			lion-energy {
 				mips-per-mhz = <0x326>;
-				power-coefficient = <0x36c>; // 0x35c
+				power-coefficient = <0x35c>; // 0x35c
 				mips-per-mhz-s = <0x11d>;
 				power-coefficient-s = <0x22f>;
 				static-power-coefficient = <0x10e>;
-				efficiency-weight = <0x21>; // 0x21
+				efficiency-weight = <0x40>; // 0x21
 				efficiency-weight-perf = <0x12c>;
 				phandle = <0x13e>;
 			};
@@ -14427,7 +14427,7 @@
 			shared-cpus = "0-3";
 			pm_qos-min-class = <0x03>;
 			pm_qos-max-class = <0x04>;
-			step = <0x08>;              // 0x0a
+			step = <0x1a>;              // 0x0a
 			patient_mode = <0x00>;
 		};
 
@@ -14436,7 +14436,7 @@
 			shared-cpus = "4-5";
 			pm_qos-min-class = <0x05>;
 			pm_qos-max-class = <0x06>;
-			step = <0x05>;              // 0x08
+			step = <0x1a>;              // 0x08
 			patient_mode = <0x00>;
 		};
 
@@ -14445,7 +14445,7 @@
 			shared-cpus = "6-7";
 			pm_qos-min-class = <0x07>;
 			pm_qos-max-class = <0x08>;
-			step = <0x05>;              // 0x0a
+			step = <0x1a>;              // 0x0a
 			patient_mode = <0x00>;
 		};
 	};
@@ -14481,7 +14481,7 @@
 			min-freq = <0x6be90>;   // <0x6be90>
 			pm_qos-min-class = <0x03>;
 			pm_qos-max-class = <0x04>;
-			user-default-qos = <0xc4c70>;
+			user-default-qos = <0x101148>;   // <0xc4c70>
 			user-boost = <0x00>;
 			#cooling-cells = <0x02>;
 			phandle = <0x143>;
@@ -14510,7 +14510,7 @@
 			min-freq = <0x5c0a8>;   // <0x7bc78>
 			pm_qos-min-class = <0x05>;
 			pm_qos-max-class = <0x06>;
-			user-default-qos = <0xce4c8>;
+			user-default-qos = <0x104410>;   // <0xce4c8>
 			user-boost = <0x01>;
 			#cooling-cells = <0x02>;
 			phandle = <0x144>;
@@ -14545,11 +14545,11 @@
 			dm-type = <0x02>;
 			need-awake;
 			max-freq = <0x2e0540>;  // <0x29a810>
-			min-freq = <0x854d0>;   // <0x854d0>
+			min-freq = <0x55730>;   // <0x854d0>
 			pm_qos-min-class = <0x07>;
 			pm_qos-max-class = <0x08>;
-			pm_qos-booting = <0x1e8c50>;
-			user-default-qos = <0xeadd0>;
+			pm_qos-booting = <0x21b8d0>;    // <0x1e8c50>
+			user-default-qos = <0x104410>;   // <0xeadd0>
 			user-boost = <0x02>;
 			#cooling-cells = <0x02>;
 			phandle = <0x145>;
@@ -14560,7 +14560,7 @@
 					const-type = <0x00>;
 					dm-type = <0x03>;
 					dynamic-disable;
-					table = <0x2e0540 0x29a810 0x2b3e50 0x29a810 0x29a810 0x29a810 0x2811d0 0x29a810 0x267b90 0x29a810 0x24e550 0x26ae58 0x234f10 0x26ae58 0x21b8d0 0x22e980 0x1e8c50 0x22e980 0x1cf610 0x00 0x1b5fd0 0x00 0x19c990 0x00 0x183350 0x00 0x169d10 0x00 0x1506d0 0x00 0x137090 0x00 0x11da50 0x00 0x104410 0x00 0xeadd0 0x00 0xd1790 0x00 0xb8150 0x00 0x9eb10 0x00 0x854d0 0x00>;
+					table = <0x2e0540 0x29a810 0x2b3e50 0x29a810 0x29a810 0x29a810 0x2811d0 0x29a810 0x267b90 0x29a810 0x24e550 0x26ae58 0x234f10 0x26ae58 0x21b8d0 0x22e980 0x1e8c50 0x22e980 0x1cf610 0x00 0x1b5fd0 0x00 0x19c990 0x00 0x183350 0x00 0x169d10 0x00 0x1506d0 0x00 0x137090 0x00 0x11da50 0x00 0x104410 0x00 0xeadd0 0x00 0xd1790 0x00 0xb8150 0x00 0x9eb10 0x00 0x854d0 0x00 0x55730 0x00>;
 				};
 
 				mif-skew {
@@ -14582,7 +14582,7 @@
 	exynos-hiu {
 		compatible = "samsung,exynos-hiu";
 		interrupts = <0x00 0xb3 0x04>;
-		boost-threshold = <0x1e8c50>;
+		boost-threshold = <0x202290>;   // <0x1e8c50>
 		boost-max = <0x29a810>;
 		cal-id = <0xb040004>;
 		sw-pbl = <0xff>;
@@ -14599,7 +14599,7 @@
 		interrupts = <0x00 0xb3 0x04>;
 		sibling-cpus = "6-7";
 		down-step = <0x01>;
-		max-freq-wo-ocp = <0x1e8c50>;
+		max-freq-wo-ocp = <0x202290>;   // <0x1e8c50>
 		release-mode = <0x01>;
 		release-threshold = <0x32>;
 		release-duration = <0x0f>;
@@ -15874,8 +15874,8 @@
 		sensors = <0x3e>;
 		sensing_mode = "max";   // <balance> min max
 		hotplug_enable = <0x01>;
-		hotplug_in_threshold = <0x5b>;
-		hotplug_out_threshold = <0x60>;
+		hotplug_in_threshold = <0x5a>;  // <0x5b>
+		hotplug_out_threshold = <0x64>; // <0x60>
 		#thermal-sensor-cells = <0x00>;
 		phandle = <0x172>;
 	};
@@ -15953,7 +15953,7 @@
 
 		BIG {
 			zone_name = "BIG_THERMAL";
-			polling-delay-passive = <0x32>;
+			polling-delay-passive = <0x00>; // <0x32>
 			polling-delay = <0x3e8>;
 			thermal-sensors = <0x172>;
 			governor = "power_allocator";
@@ -15968,8 +15968,8 @@
 			trips {
 
 				big-cold {
-					temperature = <0x4e20>;
-					hysteresis = <0x1388>;
+					temperature = <0x4e20>; // <0x4e20> millicelsius
+					hysteresis = <0x2710>;  // <0x1388> millicelsius
 					type = "active";
 					phandle = <0x345>;
 				};
@@ -15982,43 +15982,43 @@
 				};
 
 				big-control-temp {
-					temperature = <0x14438>;
-					hysteresis = <0x1388>;
+					temperature = <0x130b0>;// <0x14438>
+					hysteresis = <0x3a98>;  // <0x1388> 2710
 					type = "passive";
 					phandle = <0x173>;
 				};
 
 				big-alert0 {
-					temperature = <0x17318>;
-					hysteresis = <0x1388>;
+					temperature = <0x14438>;// <0x17318>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x347>;
 				};
 
 				big-alert1 {
-					temperature = <0x186a0>;
-					hysteresis = <0x1388>;
+					temperature = <0x17318>;// <0x186a0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x348>;
 				};
 
 				big-alert2 {
-					temperature = <0x19a28>;
-					hysteresis = <0x1388>;
+					temperature = <0x186a0>;// <0x19a28>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x349>;
 				};
 
 				big-alert3 {
-					temperature = <0x1adb0>;
-					hysteresis = <0x1388>;
+					temperature = <0x19a28>;// <0x1adb0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x34a>;
 				};
 
 				big-hot {
-					temperature = <0x1c138>;
-					hysteresis = <0x1388>;
+					temperature = <0x1c138>;// <0x1c138>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "hot";
 					phandle = <0x34b>;
 				};
@@ -16035,7 +16035,7 @@
 
 		MID {
 			zone_name = "MID_THERMAL";
-			polling-delay-passive = <0x32>;
+			polling-delay-passive = <0x00>; // <0x32>
 			polling-delay = <0x3e8>;
 			thermal-sensors = <0x174>;
 			governor = "power_allocator";
@@ -16051,7 +16051,7 @@
 
 				mid-cold {
 					temperature = <0x4e20>;
-					hysteresis = <0x1388>;
+					hysteresis = <0x3a98>;  // <0x1388> 2710
 					type = "active";
 					phandle = <0x34d>;
 				};
@@ -16064,43 +16064,43 @@
 				};
 
 				mid-control-temp {
-					temperature = <0x14438>;
-					hysteresis = <0x1388>;
+					temperature = <0x130b0>;// <0x14438>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "passive";
 					phandle = <0x175>;
 				};
 
 				mid-alert0 {
-					temperature = <0x17318>;
-					hysteresis = <0x1388>;
+					temperature = <0x14438>;// <0x17318>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x34f>;
 				};
 
 				mid-alert1 {
-					temperature = <0x186a0>;
-					hysteresis = <0x1388>;
+					temperature = <0x17318>;// <0x186a0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x350>;
 				};
 
 				mid-alert2 {
-					temperature = <0x19a28>;
-					hysteresis = <0x1388>;
+					temperature = <0x186a0>;// <0x19a28>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x351>;
 				};
 
 				mid-alert3 {
-					temperature = <0x1adb0>;
-					hysteresis = <0x1388>;
+					temperature = <0x19a28>;// <0x1adb0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x352>;
 				};
 
 				mid-hot {
-					temperature = <0x1c138>;
-					hysteresis = <0x1388>;
+					temperature = <0x1c138>;// <0x1c138>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "hot";
 					phandle = <0x353>;
 				};
@@ -16125,57 +16125,57 @@
 			trips {
 
 				little-alert0 {
-					temperature = <0x4e20>;
-					hysteresis = <0x1388>;
+					temperature = <0x4e20>; // milicelsius
+					hysteresis = <0x3a98>;  // <0x1388> 2710 milicelcius
 					type = "active";
 					phandle = <0x177>;
 				};
 
 				little-alert1 {
-					temperature = <0x128e0>;
-					hysteresis = <0x1388>;
+					temperature = <0x11558>;// <0x128e0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x178>;
 				};
 
 				little-alert2 {
-					temperature = <0x13c68>;
-					hysteresis = <0x1388>;
+					temperature = <0x128e0>;// <0x13c68>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x179>;
 				};
 
 				little-alert3 {
-					temperature = <0x14ff0>;
-					hysteresis = <0x1388>;
+					temperature = <0x13c68>;// <0x14ff0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x17a>;
 				};
 
 				little-alert4 {
-					temperature = <0x16378>;
-					hysteresis = <0x1388>;
+					temperature = <0x14ff0>;// <0x16378>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x17b>;
 				};
 
 				little-alert5 {
-					temperature = <0x17700>;
-					hysteresis = <0x1388>;
+					temperature = <0x16378>;// <0x17700>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x17c>;
 				};
 
 				little-alert6 {
-					temperature = <0x18a88>;
-					hysteresis = <0x1388>;
+					temperature = <0x17700>;// <0x18a88>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x17d>;
 				};
 
 				little-hot {
-					temperature = <0x1c138>;
-					hysteresis = <0x1388>;
+					temperature = <0x1c138>;// <0x1c138>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "hot";
 					phandle = <0x17e>;
 				};
@@ -16227,7 +16227,7 @@
 
 		G3D {
 			zone_name = "G3D_THERMAL";
-			polling-delay-passive = <0x64>;
+			polling-delay-passive = <0x00>; // <0x64>
 			polling-delay = <0x00>;
 			thermal-sensors = <0x17f>;
 			governor = "power_allocator";
@@ -16242,8 +16242,8 @@
 			trips {
 
 				gpu-cold {
-					temperature = <0x4e20>;
-					hysteresis = <0x1388>;
+					temperature = <0x4e20>; // milicelsius
+					hysteresis = <0x3a98>;  // <0x1388> 2710 milicelsius
 					type = "active";
 					phandle = <0x356>;
 				};
@@ -16256,43 +16256,43 @@
 				};
 
 				gpu-control-temp {
-					temperature = <0x157c0>;
-					hysteresis = <0x1388>;
+					temperature = <0x16b48>;// <0x157c0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "passive";
 					phandle = <0x180>;
 				};
 
 				gpu-alert0 {
-					temperature = <0x19a28>;
-					hysteresis = <0x1388>;
+					temperature = <0x1adb0>;// <0x19a28>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x358>;
 				};
 
 				gpu-alert1 {
-					temperature = <0x1adb0>;
-					hysteresis = <0x1388>;
+					temperature = <0x19a28>;// <0x1adb0>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x359>;
 				};
 
 				gpu-alert2 {
-					temperature = <0x1c138>;
-					hysteresis = <0x1388>;
+					temperature = <0x1adb0>;// <0x1c138>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x35a>;
 				};
 
 				gpu-alert3 {
-					temperature = <0x1c138>;
-					hysteresis = <0x1388>;
+					temperature = <0x1b580>;// <0x1c138>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "active";
 					phandle = <0x35b>;
 				};
 
 				gpu-hot {
-					temperature = <0x1c138>;
-					hysteresis = <0x1388>;
+					temperature = <0x1c138>;// <0x1c138>
+					hysteresis = <0x3a98>;  // <0x1388>
 					type = "hot";
 					phandle = <0x35c>;
 				};
