drivers/zram: Use lz4 as default zram compression
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -45,6 +45,8 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
+CONFIG_CRYPTO_LZ4=y
+CONFIG_LZ4_COMPRESS=y
 
 ## HZ TICK
 # CONFIG_HZ_50 is not set
