dts: exynos9830 - some improvements
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9830.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9830.dts
@@ -7550,7 +7550,7 @@
 		gpu_dvfs_table = <0xdafe8 0x4e 0x64 0x05 0x29a810 0x13d620 0x156c60 0x19c990 0xcb200 0x4e 0x62 0x05 0x29a810 0x13d620 0x156c60 0x19c990 0xab630 0x4e 0x5a 0x05 0x26ae58 0x13d620 0x00 0x00 0x8ba60 0x4e 0x5a 0x01 0x1ef1e0 0x13d620 0x00 0x00 0x6f158 0x4b 0x55 0x01 0x177bb8 0x13d620 0x00 0x00 0x5c0a8 0x4e 0x5a 0x01 0x14a140 0x00 0x00 0x00 0x3f7a0 0x4e 0x5d 0x01 0x14a140 0x00 0x00 0x00 0x26160 0x00 0x5d 0x01 0xce4c8 0x00 0x00 0x00>;
 		gpu_cl_pmqos_table_size = <0x08 0x05>;
 		gpu_cl_pmqos_table = <0xdafe8 0x1ef1e0 0x13d620 0x156c60 0x19c990 0xcb200 0x1ef1e0 0x13d620 0x156c60 0x19c990 0xab630 0x177bb8 0x13d620 0x00 0x00 0x8ba60 0x177bb8 0x13d620 0x00 0x00 0x6f158 0x14a140 0x13d620 0x00 0x00 0x5c0a8 0xf78f0 0x00 0x00 0x00 0x3f7a0 0xa50a0 0x00 0x00 0x00 0x26160 0x854d0 0x00 0x00 0x00>;
-		gpu_sustainable_info = <0x6f158 0x55 0x00 0x00 0x00>;
+		gpu_sustainable_info = <0x8ba60 0x55 0x00 0x00 0x00>;   // <0x6f158 0x55 0x00 0x00 0x00>
 		gpu_pmqos_cpu_cluster_num = <0x03>;
 		gpu_pmu_status_reg_offset = <0x2204>;
 		gpu_pmu_status_local_pwr_mask = <0x01>;
@@ -7573,7 +7573,7 @@
 		gpu_dvs = <0x00>;
 		gpu_inter_frame_pm = <0x01>;
 		gpu_inter_frame_dynamic_util = <0x32>;
-		gpu_inter_frame_dynamic_freq = <0xab630>;
+		gpu_inter_frame_dynamic_freq = <0xdafe8>;   // <0xab630>
 		gpu_perf_gathering = <0x00>;
 		gpu_runtime_pm_delay_time = <0x32>;
 		gpu_dvfs_polling_time = <0x1e>;
@@ -7586,7 +7586,7 @@
 		gpu_pmqos_cl1_max_clock = <0x19c990 0x00>;
 		gpu_cl_dvfs_start_base = <0x5c0a8>;
 		gpu_debug_level = <0x04>;   // 0x03 : DEBUG(1) INFO(2) WARNING(3) ERROR(4)
-		gpu_trace_level = <0x01>;   // 0x08
+		gpu_trace_level = <0x02>;   // 0x08
 		gpu_mo_min_clock = <0x5c0a8>;
 		gpu_boost_gpu_min_lock = <0x00>;
 		gpu_boost_egl_min_lock = <0x1c9080>;
@@ -11490,12 +11490,12 @@
 
 			coregroup1 {
 				coverage-ratio = <0x1e>;
-				active-ratio = <0x8a>;  // 0x64
+				active-ratio = <0x70>;  // 0x64
 			};
 
 			coregroup2 {
 				coverage-ratio = <0x1e>;
-				active-ratio = <0x8a>;  // 0x64
+				active-ratio = <0x90>;  // 0x64, 0x8a
 			};
 		};
 
@@ -11507,13 +11507,13 @@
 			};
 
 			coregroup1 {
-				active-ratio-limit = <0x1a>;    // 0x30
-				active-ratio-boost = <0x15>;    // 0x23
+				active-ratio-limit = <0x30>;    // 0x30
+				active-ratio-boost = <0x10>;    // 0x23 0x15
 			};
 
 			coregroup2 {
 				active-ratio-limit = <0x1e>;    // 0x1e
-				active-ratio-boost = <0x10>;    // 0x00
+				active-ratio-boost = <0x02>;    // 0x00
 			};
 		};
 
@@ -14320,8 +14320,8 @@
 				mips-per-mhz-s = <0x14f>;
 				power-coefficient-s = <0x120>;
 				static-power-coefficient = <0x51>;
-				efficiency-weight = <0xc8>; // 0xc8
-				efficiency-weight-perf = <0xc8>;
+				efficiency-weight = <0xd8>; // 0xc8
+				efficiency-weight-perf = <0xf8>;    // 0xc8
 				phandle = <0x139>;
 			};
 
@@ -14331,8 +14331,8 @@
 				mips-per-mhz-s = <0x11d>;
 				power-coefficient-s = <0x22f>;
 				static-power-coefficient = <0x10e>;
-				efficiency-weight = <0x40>; // 0x21
-				efficiency-weight-perf = <0x12c>;
+				efficiency-weight = <0x21>; // 0x21
+				efficiency-weight-perf = <0x16c>;   // 0x12c
 				phandle = <0x13e>;
 			};
 		};
@@ -14481,7 +14481,7 @@
 			min-freq = <0x6be90>;   // <0x6be90>
 			pm_qos-min-class = <0x03>;
 			pm_qos-max-class = <0x04>;
-			user-default-qos = <0x101148>;   // <0xc4c70>
+			user-default-qos = <0x13d620>;   // <0xc4c70>
 			user-boost = <0x00>;
 			#cooling-cells = <0x02>;
 			phandle = <0x143>;
@@ -14492,7 +14492,7 @@
 					const-type = <0x00>;
 					dm-type = <0x03>;
 					dynamic-disable;
-					table = <0x202290 0x00 0x1e8c50 0x00 0x1dc130 0x00 0x1c2af0 0x00 0x1a94b0 0x00 0x183350 0x00 0x163780 0x00 0x13d620 0x00 0x11a788 0x00 0x101148 0x00 0xe7b08 0x00 0xc4c70 0x00 0x9eb10 0x00 0x854d0 0x00 0x6be90 0x00 0x55b18 0x00 0x2c6f0 0x00>;
+					table = <0x202290 0x00 0x1e8c50 0x00 0x1dc130 0x00 0x1c2af0 0x00 0x1a94b0 0x00 0x183350 0x00 0x163780 0x00 0x13d620 0x00 0x11a788 0x00 0x101148 0x00 0xe7b08 0x00 0xc4c70 0x00 0x9eb10 0x00 0x854d0 0x00 0x6be90 0x00 0x61a80 0x00 0x55b18 0x00 0x2c6f0 0x00>;
 				};
 			};
 
@@ -14506,7 +14506,7 @@
 			sibling-cpus = "4-5";
 			cal-id = <0xb040003>;
 			dm-type = <0x01>;
-			max-freq = <0x29a810>;  // <0x27ac40>
+			max-freq = <0x27ac40>;  // <0x263540>
 			min-freq = <0x5c0a8>;   // <0x7bc78>
 			pm_qos-min-class = <0x05>;
 			pm_qos-max-class = <0x06>;
@@ -14521,7 +14521,7 @@
 					const-type = <0x00>;
 					dm-type = <0x03>;
 					dynamic-disable;
-					table = <0x27ac40 0x29a810 0x263540 0x29a810 0x249f00 0x26ae58 0x234f10 0x26ae58 0x21b8d0 0x22e980 0x202290 0x22e980 0x1e8c50 0x22e980 0x1cf610 0x00 0x1b5fd0 0x00 0x19c990 0x00 0x183350 0x00 0x1702a0 0x00 0x156c60 0x00 0x12a570 0x00 0x104410 0x00 0xeadd0 0x00 0xce4c8 0x00 0xb8150 0x00 0x9eb10 0x00 0x7bc78 0x00 0x5c0a8 0x00>;
+					table = <0x294280 0x27ac40 0x294280 0x263540 0x294280 0x249f00 0x26ae58 0x234f10 0x26ae58 0x21b8d0 0x22e980 0x202290 0x22e980 0x1e8c50 0x22e980 0x1cf610 0x00 0x1b5fd0 0x00 0x19c990 0x00 0x183350 0x00 0x1702a0 0x00 0x156c60 0x00 0x12a570 0x00 0x104410 0x00 0xeadd0 0x00 0xce4c8 0x00 0xb8150 0x00 0x9eb10 0x00 0x7bc78 0x00 0x5c0a8 0x00>;
 				};
 
 				lit-skew {
@@ -14583,7 +14583,7 @@
 		compatible = "samsung,exynos-hiu";
 		interrupts = <0x00 0xb3 0x04>;
 		boost-threshold = <0x202290>;   // <0x1e8c50>
-		boost-max = <0x29a810>;
+		boost-max = <0x2e0540>; // <0x29a810>
 		cal-id = <0xb040004>;
 		sw-pbl = <0xff>;
 		bl1-inc = <0x00>;
@@ -15568,7 +15568,7 @@
 
 			dvfs_gpu {
 				dm-index = <0x0d>;
-				available = "false";
+				available = "true";    // false
 				cal_id = <0xb04000a>;
 				dm_type_name = "dm_gpu";
 			};
@@ -15874,8 +15874,8 @@
 		sensors = <0x3e>;
 		sensing_mode = "max";   // <balance> min max
 		hotplug_enable = <0x01>;
-		hotplug_in_threshold = <0x5a>;  // <0x5b>
-		hotplug_out_threshold = <0x64>; // <0x60>
+		hotplug_in_threshold = <0x50>;  // <0x5b>
+		hotplug_out_threshold = <0x6a>; // <0x60>
 		#thermal-sensor-cells = <0x00>;
 		phandle = <0x172>;
 	};
@@ -16231,7 +16231,7 @@
 			polling-delay = <0x00>;
 			thermal-sensors = <0x17f>;
 			governor = "power_allocator";
-			sustainable-power = <0x00>;
+			sustainable-power = <0x01>; // <0x00>
 			k_po = <0x00>;
 			k_pu = <0x00>;
 			k_i = <0x00>;
